@@ -1,0 +1,23 @@
+TARGET = shadow.elf
+OBJS = shadow.o
+
+all: rm-elf $(TARGET)
+
+include $(KOS_BASE)/Makefile.rules
+
+clean:
+	-rm -f $(TARGET) $(OBJS)
+
+rm-elf:
+	-rm -f $(TARGET)
+
+$(TARGET): $(OBJS)
+	kos-cc -o $(TARGET) $(OBJS)
+
+run: $(TARGET)
+	$(KOS_LOADER) $(TARGET) -n
+
+dist:
+	rm -f $(OBJS)
+	$(KOS_STRIP) $(TARGET)
+
